@@ -1,6 +1,15 @@
 2005-09-28  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/widgets/list.py:
+	(List.count, List.index, List.extend): Add
+	(List.insert, List.pop, List.reverse, List.sort): Add stubs
+	(List.append, List.remove, List.update): Rename
+	(List.add_instance, List.remove_instance, List.update_instance)
+	(List.select_instance): Add backwards compat wrappers
+
+	* kiwi/utils.py (deprecated): New decorator
+
+	* kiwi/ui/widgets/list.py:
 	Remove a couple of methods, now when we have the iter in the instance.
 	
 2005-09-27  Johan Dahlin  <johan@gnome.org>
